--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,286 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.signup{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 432px;
+  background: white;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 16px rgba(0,0,0,0.1);
+  padding-bottom: 18px;
+  border-radius: 8px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.top{
+  display: flex;
+  align-items: center;
+  padding: 1px 18px ;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+.top>div>h2{
+  font-size: 32px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.top>div>p{
+  color: #606770;
+  line-height: 0px;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+.signup_body{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 15px;
+}
+
+.same{
+  font-size: 15px;
+  padding: 10px;
+  outline: none;
+  width: 50%;
+  border: 1px solid #ccd0d5;
+}
+
+.num{
+  border: 1px solid #ccd0d5;
+  width: 80%;
+  width: "100%";
+}
+
+.name{
+  display: flex;
+  gap: 10px;
+  margin: 15px 0;
+  font-size: 15px;
+}
+
+.bottom input{
+  padding: 10px;
+  width: 94%;
+  font-size: 15px;
+  margin-bottom: 15px;
+  outline: none;
+}
+
+.birthday{
+  padding: 15px;
+  padding-top: 0px;
+  line-height: 0px;
+}
+
+.birthday select{
+  padding: 7px 35px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid rgba(0,0,0,0.458);
+}
+
+.date{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 5px 0;
+}
+
+.pronoun{
+  display: block;
+  margin: 0 auto;
+  width: 93%;
+  margin-top: 15px;
+  text-align: start;
+  font-size: 15px;
+  color: black;
+  height: 35px;
+  border: 1px solid #ccd0d5;
+  border-color: #ccd0d5;
+  outline: none
+}
+
+.gender{
+    padding: 0 15px;
+    padding-top: -20px;
+}
+
+.male{
+  float: right;
+  margin-left: 10px;
+}
+
+.vis{
+  padding: 0 15px;
+  padding-top: -20px;
+}
+
+.person{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+
+.gender .person{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.gender .person>div{
+  font-size: 16px;
+  border: 1px solid rgba(0,0,0,0.458);
+  padding: 7px;
+  display: flex;
+  gap: 15px;
+}
+
+.person>div>label{
+  margin-right: 10px;
+}
+
+.content{
+  padding: 0 15px;
+}
+
+.content p{
+  margin: 10px 0;
+  font-size: 12px;
+  font-family: sans-serif;
+}
+
+.text{
+  font-size: 12px;
+  font-family: sans-serif;
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.signin{
+  height: 36px;
+  width: 194px;
+  background: #42b72a;
+  border: none;
+  color: white;
+  font-weight: bold;
+  font-size: 17px;
+  border-radius: 4px;
+  margin-left: 118px;
+  cursor: pointer;
+  text-transform: capitalize;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.btn{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+body{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  background: linear-gradient(45deg,yellowgreen,lightblue);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h2{
+  text-align: center;
+  
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+h2 span{
+  animation: animate 4s linear infinite;
+}
+
+h2 span:nth-child(1){
+  animation-delay: 0s;
+}
+h2 span:nth-child(2){
+  animation-delay: 0.1s;
+}
+h2 span:nth-child(3){
+  animation-delay: 0.2s;
+}
+h2 span:nth-child(4){
+  animation-delay: 0.3s;
+}
+h2 span:nth-child(5){
+  animation-delay: 0.4s;
+}
+h2 span:nth-child(6){
+  animation-delay: 0.5s;
+}
+h2 span:nth-child(7){
+  animation-delay: 0.5s;
+}
+h2 span:nth-child(8){
+  animation-delay: 0.6s;
+}
+h2 span:nth-child(9){
+  animation-delay: 0.7s;
+}
+h2 span:nth-child(10){
+  animation-delay: 0.8s;
+}
+h2 span:nth-child(11){
+  animation-delay: 0.9s;
+}
+
+@keyframes animate {
+  0% , 100%{
+      color: white;
+      filter: blur(2px);
+      text-shadow: 0 0 10px yellow,
+      0 0 20px yellow,
+      0 0 40px yellow,
+      0 0 80px yellow,
+      0 0 120px yellow,
+      0 0 200px yellow,
+      0 0 300px yellow,
+      0 0 400px yellow;
+      
   }
+
+  25%,75%{
+      color: black;
+      filter: blur(0px);
+      text-shadow: none
+                
+  }
+}
+
+a{
+  font-size: 30px;
+  border: none;
+  justify-content: center;
+  display: flex;
+  align-self: center;
+  color: black;
+  background-color: aquamarine;
+  border-radius: 4px;
+  
+} 
+
+a:hover{
+  color: white;
+  background-color: cyan;
+  box-shadow: 0 0 1px cyan,
+  0 0 2px cyan, 0 0 8px cyan,
+  0 0 16px cyan, 0 0 32px cyan;
+}
+
+.calc:hover{
+  color: white;
+  background-color: cyan;
+  box-shadow: 0 0 1px cyan,
+  0 0 2px cyan, 0 0 8px cyan,
+  0 0 16px cyan, 0 0 32px cyan;
+}
+
+.result{
+  background-color: lightgreen;
+  box-shadow: 0 0 1px lightgreen,
+  0 0 2px lightgreen, 0 0 8px lightgreen,
+  0 0 16px lightgreen, 0 0 32px lightgreen;
 }
